--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
-  "name": "evil-mcp-server",
+  "name": "@promptfoo/evil-mcp-server",
   "version": "1.0.0",
   "description": "MCP server that simulates malicious behaviors for security testing",
-  "main": "dist/index.js",
+  "keywords": [
+    "mcp",
+    "security",
+    "testing"
+  ],
+  "files": ["dist"],
+  "homepage": "https://github.com/promptfoo/evil-mcp-server#readme",
+  "bugs": {
+    "url": "https://github.com/promptfoo/evil-mcp-server/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/promptfoo/evil-mcp-server.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "bin": {
-    "evil-mcp-server": "./dist/index.js"
+    "evil-mcp-server": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -18,13 +35,6 @@
     "run:stdio": "npm install && tsx src/index.ts",
     "run:http": "npm install && tsx src/index.ts --http"
   },
-  "keywords": [
-    "mcp",
-    "security",
-    "testing"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.0",
     "express": "^4.21.2",
